# quantsail-bot

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  FULL_AUDIT_PROMPT.md  GEMINI.md  GLOBAL_RULES.md  MASTER_GLOBAL_RULES.md  PROMPT.md  README.md  SCRATCHPAD.md  SETUP_GUIDE.md  VPS_DEPLOYMENT_GUIDE.md  pyrightconfig.json  start-all.bat  start-all.ps1  stop-all.bat  todo.md
services/api/: .coverage  Dockerfile  main.py  pyproject.toml  pyrightconfig.json
services/api/alembic/: env.py
services/api/app/: main.py
services/api/tests/: conftest.py  test_arming.py  test_auth_dependencies.py  test_auth_rbac.py  test_contract_parity.py  test_db_schema.py  test_encryption.py  test_event_repo.py  test_exchange_keys.py  test_firebase_admin.py  test_firebase_auth.py  test_health.py  test_news_cache.py  test_news_endpoints.py  test_private_endpoints.py  test_public_endpoints.py  test_rate_limit.py  test_user_management.py  test_ws_helpers.py  test_ws_stream.py
services/engine/: .coverage  .pyre_configuration  Dockerfile  backtest_runner.py  config.json  demo.py  main.py  pyproject.toml  pyrightconfig.json
services/engine/backtest_results/: parameter_comparison.json
services/engine/quantsail_engine/: main.py
services/engine/scripts/: all_coins_stress_test.py  analyze_trades.py  backtest_results.txt  compare_backtest.py  compare_parameters.py  daily_aggressive_1h_BNB.csv  daily_aggressive_1h_BTC.csv  daily_aggressive_1h_ETH.csv  daily_aggressive_1h_SOL.csv  daily_aggressive_1h_XRP.csv  debug_backtest.py  debug_replace_error.py  diag_backtest.py  diagnose_signals.py  download_binance_data.py  download_new_coins.py  download_stress_data.py  fast_backtest.py  final_verify.py  full_test.py  honest_test.py  hybrid_backtest.py  matrix_test.py  portfolio_test.py  profitability_matrix.txt  profitability_scan.py  quick_backtest.py  resample_data.py  rolling_backtest.py  rolling_backtest_results.csv  run_grid_testnet.py  signal_audit.py  stress_test_suite.py  trade_diagnostics.py  trade_diagnostics.txt  trades_aggressive_1h_BNB.csv  trades_aggressive_1h_BTC.csv  trades_aggressive_1h_ETH.csv  trades_aggressive_1h_SOL.csv  trades_aggressive_1h_XRP.csv  (+1 more)
services/engine/tests/: conftest.py  test_abstract_interfaces.py  test_backtest_executor.py  test_backtest_integration.py  test_backtest_market_provider.py  test_backtest_metrics.py  test_backtest_time_manager.py  test_binance_adapter.py  test_binance_adapter_unit.py  test_breaker_exits_safety.py  test_breaker_integration.py  test_breaker_manager.py  test_breaker_triggers.py  test_compare_parameters.py  test_config_loader.py  test_config_loader_coverage.py  test_config_models.py  test_coverage_gaps.py  test_main.py  (+38 more)
(+274 files in other folders)
