[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "redis>=5.0.0",
    "ccxt>=4.5.34",
    "cryptography>=41.0.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas>=3.0.0",
    "prometheus-client>=0.20.0",
    "pyarrow>=15.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "sentry-sdk>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q --cov=quantsail_engine --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "auto"
testpaths = ["tests"]
